--- a/Source/Android/app/src/main/res/layout/fragment_ingame_menu.xml
+++ b/Source/Android/app/src/main/res/layout/fragment_ingame_menu.xml
@@ -81,6 +81,11 @@
                 style="@style/InGameMenuOption"/>
 
             <Button
+                android:id="@+id/menu_speed_limit"
+                android:text="@string/speed_limit_short"
+                style="@style/InGameMenuOption"/>
+
+            <Button
                 android:id="@+id/menu_screen_orientation"
                 android:text="@string/emulation_screen_orientation"
                 style="@style/InGameMenuOption"/>
