--- a/Source/iOS/DolphiniOS/DolphiniOS/UI/Notices/OSTooNew/OSTooNewNotice.xib
+++ b/Source/iOS/DolphiniOS/DolphiniOS/UI/Notices/OSTooNew/OSTooNewNotice.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17147" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17120"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -41,17 +41,15 @@
                     <rect key="frame" x="0.0" y="237.66666666666669" width="375" height="540.33333333333326"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="90n-Az-9Cs" userLabel="Content Stack">
-                            <rect key="frame" x="20" y="0.0" width="335" height="405.66666666666669"/>
+                            <rect key="frame" x="20" y="0.0" width="335" height="344.66666666666669"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G2L-KW-hUh" userLabel="Version Text">
-                                    <rect key="frame" x="0.66666666666665719" y="0.0" width="334" height="385.66666666666669"/>
-                                    <string key="text">This version of DolphiniOS does not support iOS 14.
+                                    <rect key="frame" x="0.66666666666665719" y="0.0" width="333.66666666666674" height="324.66666666666669"/>
+                                    <string key="text">DolphiniOS is not compatible with your device and/or iOS version.
 
-Apple deliberately broke DolphiniOS's fast CPU emulation (JIT) code. Without the JIT, DolphiniOS cannot run most games at playable speeds.
+Non-jailbroken devices with A11 processors or lower running any version of iOS 14 are not supported at this time.
 
-A future version of DolphiniOS may support iOS 14, so please check our website for more information:
-
-https://dolphinios.oatmealdome.me
+If you are running iOS 14.0 or iOS 14.1 on a device with an A12 processor, please upgrade to iOS 14.2.
 
 If this device is jailbroken, please install DolphiniOS from our Cydia source instead of sideloading it:
 
@@ -61,7 +59,7 @@ https://cydia.oatmealdome.me</string>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6uo-Rc-2vE">
-                                    <rect key="frame" x="47.666666666666686" y="405.66666666666674" width="240" height="0.0"/>
+                                    <rect key="frame" x="47.666666666666686" y="344.66666666666674" width="240" height="0.0"/>
                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                     <constraints>
                                         <constraint firstAttribute="height" id="kge-k2-qnG"/>
