iOS: Don't show quit warning on iOS 14.2+

--- a/Source/iOS/DolphiniOS/DolphiniOS/UI/Notices/NonJailbroken/NonJailbrokenNotice.xib
+++ b/Source/iOS/DolphiniOS/DolphiniOS/UI/Notices/NonJailbroken/NonJailbrokenNotice.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17147" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17120"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -11,7 +11,9 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="NonJailbrokenNoticeViewController">
             <connections>
+                <outlet property="m_bug_label" destination="rPE-8Q-jMN" id="BK0-Ed-Ztn"/>
                 <outlet property="m_ok_button" destination="jPS-qP-47c" id="XkX-k2-2o1"/>
+                <outlet property="m_quit_label" destination="sPf-LS-heK" id="JSa-7W-v06"/>
                 <outlet property="view" destination="r55-Fn-aBI" id="r9r-Zd-Dn7"/>
             </connections>
         </placeholder>
@@ -52,7 +54,7 @@ Performance will be 20% to 60% slower versus the jailbroken version because of r
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="When you are finished with DolphiniOS, please go to Settings and press the &quot;Quit&quot; button." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sPf-LS-heK" userLabel="Quit Text">
-                                    <rect key="frame" x="5.6666666666666572" y="162.33333333333334" width="324" height="61"/>
+                                    <rect key="frame" x="5.3333333333333428" y="162.33333333333334" width="324.33333333333326" height="61"/>
                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                     <color key="textColor" systemColor="systemRedColor"/>
                                     <nil key="highlightedColor"/>
