iOS: Include newer processors in OS upgrade prompt text

--- a/Source/iOS/DolphiniOS/DolphiniOS/UI/Notices/OSTooNew/OSTooNewNotice.xib
+++ b/Source/iOS/DolphiniOS/DolphiniOS/UI/Notices/OSTooNew/OSTooNewNotice.xib
@@ -49,7 +49,7 @@
 
 Non-jailbroken devices with A11 processors or lower running any version of iOS 14 are not supported at this time.
 
-If you are running iOS 14.0 or iOS 14.1 on a device with an A12 processor, please upgrade to iOS 14.2.
+If you are running iOS 14.0 or iOS 14.1 on a device with an A12 processor or newer, please upgrade to iOS 14.2.
 
 If this device is jailbroken, please install DolphiniOS from our Cydia source instead of sideloading it:
 
