--- a/Source/Android/app/src/main/res/values/arrays.xml
+++ b/Source/Android/app/src/main/res/values/arrays.xml
@@ -349,13 +349,15 @@
 
     <string-array name="controllersEntries">
         <item>GameCube Controller</item>
-        <item>Wii Remote</item>
+        <item>GameCube Adapter</item>
+        <item>Vertical Wii Remote</item>
         <item>Horizontal Wii Remote</item>
         <item>Wii Remote + Nunchuk</item>
         <item>Classic Controller</item>
-        <item>None</item>
+        <item>Real Wii Remote (DolphinBar required)</item>
     </string-array>
     <string-array name="controllersValues">
+        <item>None</item>
         <item>None</item>
         <item>None</item>
         <item>None</item>
